feat(sync-sim): add transport abstraction for protocol testing
Add infrastructure to run sync protocols through in-memory channels,
enabling testing of actual message flow and state convergence.

Key changes:
- Add SyncTransport trait abstracting network operations (send/recv/close)
- Add StreamTransport for production Stream wrapper
- Add SimStream for in-memory channel-based transport
- Add protocol.rs with execute_hash_comparison_sync for simulation
- Add SimNode::new_in_context for shared context testing
- Fix entity_count to use storage leaf_count (source of truth)

The simulation now uses the exact same storage code path as production
(Index<MainStorage>, Interface<MainStorage>, RuntimeEnv callbacks),
with only the Database implementation differing (InMemoryDB vs RocksDB).

Phase 1 of sim-transport-abstraction plan.

--- a/crates/node/primitives/Cargo.toml
+++ b/crates/node/primitives/Cargo.toml
@@ -11,6 +11,7 @@ publish = true
 [dependencies]
 actix.workspace = true
 async-stream.workspace = true
+async-trait.workspace = true
 borsh.workspace = true
 camino.workspace = true
 clap = { workspace = true, features = ["derive"] }
